# FRC-2017

./: .classpath  .gitignore  .project  .pydevproject  README.md  Source.cpp  build.properties  startup.sh  sysProps.xml
Auto/: Blue - Gear On Left Peg And Shoot Corner.txt  Blue - Gear On Left Peg And Shoot Inset.txt  Blue - Left Close Hopper.txt  Blue - Left Far Hopper.txt  Blue Center - Gear On Center Peg And Shoot Left.txt  Center - Gear On Center Peg.txt  Gear On Left Peg Corner.txt  Gear On Left Peg Inset.txt  Gear On Right Peg Corner.txt  Gear On Right Peg Inset.txt  Parallel Test.txt  Red - Gear On Right Peg And Shoot Corner.txt  Red - Gear On Right Peg And Shoot Inset.txt  Red - Right Close Hopper.txt  Red - Right Far Hopper.txt  Red Center - Gear On Center Peg And Shoot Right.txt  Shoot.txt  Z - Base_Line.txt  Z - Nothing.txt  gearOnCenterAndShootLeft.txt  gearOnCenterAndShootRight.txt  gearOnCenterPeg.txt  gearOnLeftAndShoot.txt  gearOnLeftAndShootInset.txt  gearOnLeftPeg.txt  gearOnLeftPegAndShoot.txt  gearOnLeftPegInset.txt  gearOnRightAndShoot.txt  gearOnRightAndShootInset.txt  gearOnRightPeg.txt  gearOnRightPegAndShoot.txt  gearOnRightPegInset.txt  leftCloseHopper.txt  leftFarHopper.txt  pegtest.txt  rightCloseHopper.txt  rightFarHopper.txt  rightHopper.txt  shootTest.txt
Auto/Backend/: constants.txt  (+1 more)
PegTargeting/: .compile.swp  CMakeCache.txt  CMakeLists.txt  Makefile  Source.cpp  cmake_install.cmake  compile  mjpg_streamer  restreamer.cpp
PegTargeting/gear/: out.mjpg
PegTargeting/mjpg/: out.mjpg
Vision/: Udp.cpp  Udp.h  Vision.cpp  compile
(+79 files in other folders)
