set (CMAKE_CXX_STANDARD 11)
cmake_minimum_required(VERSION 2.8)
project(Vision)
find_package(OpenCV REQUIRED) 
find_package (Threads REQUIRED)
add_executable(Vision Source.cpp)
include_directories(/home/rothv/Downloads/ntcore-master/wpiutil/include/)
include_directories(/home/rothv/Downloads/ntcore-master/include/)
include_directories(/home/rothv/Downloads/ntcore-master/native/ntcore/build/include)
target_link_libraries(Vision ${OpenCV_LIBS})
target_link_libraries(Vision /home/rothv/Downloads/ntcore-master/native/wpiutil/build/libs/wpiutil/static/x86/libwpiutil.a)
target_link_libraries(Vision /home/rothv/Downloads/ntcore-master/native/ntcore/build/libs/ntcore/static/x86/libntcore.a)
target_link_libraries(Vision ${CMAKE_THREAD_LIBS_INIT} )
